# GAMES102_homework

./: Readme.md
hw1/: CMakeLists.txt  main.cpp
hw2/: CMakeLists.txt  RbfNetWork.cpp  RbfNetWork.h  Utils.cpp  Utils.h  main.cpp  rbf_nn.py
hw2_test/: CMakeLists.txt  MathUtil.cpp  MathUtil.h  RbfNetwork.cpp  RbfNetwork.h  main.cpp  rbf_nn.py  test.cpp
hw3/: CMakeLists.txt  Utils.cpp  Utils.h  main.cpp
hw3/imgui/: CMakeLists.txt
hw3_test/: CMakeLists.txt  MathUtil.cpp  MathUtil.h  main.cpp
hw3_test/src/: glad.c
hw4/: CMakeLists.txt
hw4/include/glad/: glad.h
hw4_test/: CMakeLists.txt  fitcurve.cpp  fitcurve.h  main.cpp  myapp.cpp  myapp.h
hw4_test/imgui/: CMakeLists.txt
